<resources>
    <string name="app_name">HmsAwarenessSample</string>
    <string name="sample_awareness_description">HUAWEI Awareness Process Demonstration</string>
    <string name="clear_log">clear log</string>
    <string name="awareness_capture_sample">Awareness Capture Sample</string>
    <string name="awareness_barrier_sample">Awareness Barrier Sample</string>
    <string name="awareness_getTimeCategories">get Time Categories</string>
    <string name="awareness_getHeadsetStatus">get Headset Status</string>
    <string name="awareness_getLocation">get Location</string>
    <string name="awareness_getBehaviorStatus">get Behavior Status</string>
    <string name="awareness_getAmbientLightIntensity">get Light Intensity</string>
    <string name="awareness_getWeatherStatus">get Weather Status</string>
    <string name="awareness_getBluetoothStatus">get Bluetooth Status</string>
    <string name="awareness_getBeaconStatus">get Beacon Status</string>
    <string name="awareness_deleteBarrier">delete Barrier</string>
    <string name="awareness_headsetBarrier">Headset Barrier Sample</string>
    <string name="awareness_headsetBarrier_keeping">add HeadsetBarrier(keep connected)</string>
    <string name="awareness_headsetBarrier_connecting">add HeadsetBarrier(connecting)</string>
    <string name="awareness_headsetBarrier_disconnecting">add HeadsetBarrier(disconnecting)</string>
    <string name="awareness_locationBarrier">Location Barrier Sample</string>
    <string name="awareness_locationBarrier_enter">add LocationBarrier(enter)</string>
    <string name="awareness_locationBarrier_stay">add LocationBarrier(stay)</string>
    <string name="awareness_locationBarrier_exit">add LocationBarrier(exit)</string>
    <string name="awareness_bluetoothBarrier">Bluetooth Barrier Sample</string>
    <string name="awareness_bluetoothBarrier_keeping">add BluetoothBarrier(keep connected)</string>
    <string name="awareness_bluetoothBarrier_connecting">add BluetoothBarrier(connecting)</string>
    <string name="awareness_bluetoothBarrier_disconnecting">add BluetoothBarrier(disconnecting)</string>
    <string name="awareness_timeBarrier">Time Barrier Sample</string>
    <string name="awareness_timeBarrier_inSunriseOrSunsetPeriod">add TimeBarrier(inSunriseOrSunsetPeriod)</string>
    <string name="awareness_timeBarrier_duringPeriodOfDay">add TimeBarrier(duringPeriodOfDay 11am to 12am)</string>
    <string name="awareness_timeBarrier_duringTimePeriod">add TimeBarrier(duringTimePeriod)</string>
    <string name="awareness_timeBarrier_duringPeriodOfWeek">add TimeBarrier(duringPeriodOfWeek Monday 9am to 12am)</string>
    <string name="awareness_timeBarrier_inTimeCategory">add TimeBarrier(inTimeCategory Weekends)</string>
    <string name="awareness_behaviorBarrier">Behavior Barrier Sample</string>
    <string name="awareness_behaviorBarrier_keeping">add BehaviorBarrier(keep still)</string>
    <string name="awareness_behaviorBarrier_beginning">add BehaviorBarrier(begin walking)</string>
    <string name="awareness_behaviorBarrier_ending">add BehaviorBarrier(end cycling)</string>
    <string name="awareness_ambientLightBarrier">AmbientLight Barrier Sample</string>
    <string name="awareness_ambientLightBarrier_range">add ambientLightBarrier(range)</string>
    <string name="awareness_ambientLightBarrier_above">add ambientLightBarrier(above)</string>
    <string name="awareness_ambientLightBarrier_below">add ambientLightBarrier(below)</string>
    <string name="awareness_beaconBarrier">Beacon Barrier Sample</string>
    <string name="awareness_beaconBarrier_discover">add beaconBarrier(discover)</string>
    <string name="awareness_beaconBarrier_missed">add beaconBarrier(missed)</string>
    <string name="awareness_beaconBarrier_keep">add beaconBarrier(keep)</string>
    <string name="awareness_barrierCombination">Barrier Combination Sample</string>
    <string name="awareness_barrierCombination_behavior_headset">add combinedBarrier(behavior and headset)</string>
    <string name="awareness_barrierCombination_time_bluetooth">add combinedBarrier(time and bluetooth)</string>
</resources>