<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_title_margin"
    android:paddingTop="@dimen/activity_title_margin"
    android:paddingRight="@dimen/activity_title_margin"
    tools:context=".awareness.BarrierActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/awareness_barrier_sample"
        />
    <Button
        android:id="@+id/headset_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_headsetBarrier"
        />
    <Button
        android:id="@+id/location_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_locationBarrier"
        />
    <Button
        android:id="@+id/bluetooth_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_bluetoothBarrier"
        />
    <Button
        android:id="@+id/behavior_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_behaviorBarrier"
        />
    <Button
        android:id="@+id/time_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_timeBarrier"
        />
    <Button
        android:id="@+id/ambientLight_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_ambientLightBarrier"
        />
    <Button
        android:id="@+id/beacon_barrier"
        style="@style/ButtonStyle"
        android:text="@string/awareness_beaconBarrier"
        />
    <Button
        android:id="@+id/barrier_combination"
        style="@style/ButtonStyle"
        android:text="@string/awareness_barrierCombination"
        />
</LinearLayout>