<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_title_margin"
    android:paddingTop="@dimen/activity_title_margin"
    android:paddingRight="@dimen/activity_title_margin"
    android:paddingBottom="@dimen/activity_title_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/sample_awareness_description"
        />
    <Button
        android:id="@+id/awareness_capture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/awareness_capture_sample"
        />
    <Button
        android:id="@+id/awareness_barrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:text="@string/awareness_barrier_sample"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.huawei.hms.awareness.codelab.logger.LogView
            android:id="@+id/logView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
</LinearLayout>